fixed alignment, spacing and added documentation

--- a/November Wall/assets/less/wall.less
+++ b/November Wall/assets/less/wall.less
@@ -261,7 +261,7 @@ body{
                             p{
                                 color: #152c61;
                                 font: normal 300 16px/24px Poppins_light;
-                                margin: 0px 0px 19px 10px;
+                                margin: 0px 0px 20px 6px;
                             }
                         }
 
@@ -271,8 +271,7 @@ body{
                                 border: none;
                                 color: #707070;
                                 font: normal 400 16px/24px Poppins_Regular;
-                                margin-right: 30px;
-                                padding-left: 10px;
+                                margin-right: 25px;
                                 .comment_icon{
                                     border: none;
                                     display: inline-block;
@@ -423,7 +422,7 @@ body{
         .remove_message,
         .remove_comment {
             .modal_board{
-                width: 90vw;
+                width: 70vw;
             }
         }
         
@@ -471,6 +470,11 @@ body{
                         width: 50px;
                     }
                 }
+            }
+        }
+        .modal {
+            .modal_board{
+                width: 90vw;
             }
         }
     }
